# brug

./: Cargo.toml  README.md  Some_results.txt  cleaning.sh  graph.py  output.txt  records.txt
brug_C/: Config.h  switchrealloc.c  switchrealloc.h
src/: brug_allocator.rs  lib.rs  main.rs
src/allocators/: je.rs  mi.rs  tc.rs
