[package]
name = "brug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = "0.1.34"
tcmalloc = "0.3.0"
jemallocator = "0.5.0"
lazy_static = "1.4.0"
libc = "0.2.139"
once_cell = "1.17.1"
byte-unit = "4.0.19"

arrow = "35.0.0"
glassbench = "0.3.4"
criterion = "0.4"
datafusion = "22.0.0"
# vega = { git = "https://github.com/rajasekarv/vega", branch = "master }

[[bench]]
name = "my_benchmark"
harness = false


[lib]
name = "brug"
path = "src/lib.rs"

[[bin]]
name = "brug"
src = "src/main.rs"